<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrl_login_conatiner"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginActivity">

        <TextView
            android:id="@+id/txt_login_account_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="Dont have an Account?"
            android:textColor="@color/material_on_surface_emphasis_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_send_request" />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:background="@drawable/login_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_open_signup_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="Sign Up"
            android:textColor="@color/color_primary_blend"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_login_account_prompt"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_send_request" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.841"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/person_icon_white" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:src="@drawable/logo"
            app:civ_border_color="@color/color_primary"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/txv_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="115dp"
            android:text="Login"
            android:textColor="@color/color_primary_blend"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_txt_login_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_boaders"
            android:drawableStart="@drawable/person_icon"
            android:drawablePadding="2dp"
            android:ems="10"
            android:hint="user name"
            android:inputType="textPersonName"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txv_login_error_message" />

        <EditText
            android:id="@+id/edtx_login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_boaders"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="2dp"
            android:ems="10"
            android:hint="password"
            android:inputType="textPassword"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_txt_login_user_name" />

        <com.kusu.loadingbutton.LoadingButton
            android:id="@+id/btn_login_send_request"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:clickable="false"
            android:focusable="true"
            android:padding="8dp"
            android:text="Login"
            android:textColor="@color/white"
            android:visibility="visible"
            app:cornerRadius="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtx_login_password"
            app:lb_cornerRadius="32dp"
            app:lb_isShadowEnable="false" />

        <TextView
            android:id="@+id/txv_login_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="177dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="177dp"
            android:textColor="@color/color_secondary_blend"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <View
            android:id="@+id/view19"
            android:layout_width="3dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey_shed"
            app:layout_constraintStart_toEndOf="@+id/tv_login_open_signup_activity"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_send_request" />

        <TextView
            android:id="@+id/v_open_welcome_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="16dp"
            android:text="Home"
            android:textColor="@color/color_primary_blend"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view19"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_send_request" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
