...
            android:background="@drawable/login_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/rl_customer_home_logout_btn"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:text="Customer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_customer_home_customer_name" />

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_customer_home_open_services_activity"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="67dp"
                android:layout_marginRight="32dp"
                android:padding="2dp"
...
                        android:layout_below="@id/tv_customer_home_services_card_title"
                        android:src="@drawable/ic_miscellaneous_services" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_customer_home_open_service_request_activity"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="67dp"
                android:padding="2dp"
                app:cardBackgroundColor="@color/grey_shed"
...
